--- a/index.html
+++ b/index.html
@@ -86,5 +86,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
   <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <!-- Your custom JS -->
+  <script src="script.js"></script>
 </body>
 </html>
