--- a/index.html
+++ b/index.html
@@ -4,60 +4,65 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ZWL Currency Converter</title>
-
-  <!-- Meta for SEO & Sharing -->
   <meta name="description" content="Live Zimbabwean Dollar (ZWL) currency converter with real-time exchange rates and 7-day trend chart. Built by Lisa Dube." />
-  <meta property="og:title" content="ZWL Currency Converter – Live Exchange Rates" />
-  <meta property="og:description" content="Convert ZWL to USD, GBP, ZAR, and EUR instantly with live rates and chart analytics." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://lisaexist-hub.github.io/ZWL-Currency-Converter/" />
-  <meta property="og:image" content="https://lisaexist-hub.github.io/ZWL-Currency-Converter/assets/preview.png" />
 
+  <!-- Favicon, SEO Others, etc. (optional) -->
+
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-  <div class="wrap">
-    <h1>💱 ZWL Currency Converter</h1>
-    <p class="subtitle">Live exchange rates & 7-day trend analytics</p>
+  <!-- Orange Header Bar -->
+  <div class="header-bar">
+    <span class="logo">
+      <span class="logo-emoji">💱</span>
+      <span class="brand">ZWL Currency Converter</span>
+    </span>
+  </div>
 
-    <form id="converter-form">
-      <div class="grid">
-        <div>
-          <label for="amount">Amount</label>
-          <input type="number" id="amount" placeholder="Enter amount" required />
-        </div>
-        <div>
-          <label for="from">From</label>
-          <select id="from">
-            <option value="ZWL">ZWL</option>
-            <option value="USD">USD</option>
-            <option value="GBP">GBP</option>
-            <option value="ZAR">ZAR</option>
-            <option value="EUR">EUR</option>
-          </select>
-        </div>
-        <div>
-          <label for="to">To</label>
-          <select id="to">
-            <option value="USD">USD</option>
-            <option value="ZWL">ZWL</option>
-            <option value="GBP">GBP</option>
-            <option value="ZAR">ZAR</option>
-            <option value="EUR">EUR</option>
-          </select>
-        </div>
+  <!-- Converter Card -->
+  <div class="converter-card">
+    <h2>Convert currencies instantly</h2>
+    <div class="subtitle">Real-time exchange rates for ZWL, USD, ZAR, GBP, and EUR.</div>
+    <form id="converter-form" autocomplete="off">
+      <div class="form-group">
+        <label for="from">From:</label>
+        <select id="from">
+          <option value="ZWL">ZWL - Zimbabwe Dollar</option>
+          <option value="USD">USD - United States Dollar</option>
+          <option value="ZAR">ZAR - South African Rand</option>
+          <option value="GBP">GBP - British Pound</option>
+          <option value="EUR">EUR - Euro</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="to">To:</label>
+        <select id="to">
+          <option value="USD">USD - United States Dollar</option>
+          <option value="ZWL">ZWL - Zimbabwe Dollar</option>
+          <option value="ZAR">ZAR - South African Rand</option>
+          <option value="GBP">GBP - British Pound</option>
+          <option value="EUR">EUR - Euro</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="amount">Amount:</label>
+        <input type="number" id="amount" placeholder="Enter amount" />
       </div>
       <button type="submit">Convert</button>
+      <div id="result"></div>
     </form>
-
-    <div id="result"></div>
-    <canvas id="chart" width="400" height="200"></canvas>
-
-    <footer>
-      <p>Built with ❤️ by <strong>Lisa Dube</strong> — using ExchangeRate-API v6</p>
-    </footer>
   </div>
+
+  <!-- Optionally, trend chart card section can follow -->
+  <div class="trend-card">
+    <h3>📊 ZWL vs Other Currencies (7-Day Trend)</h3>
+    <canvas id="chart" width="400" height="200"></canvas>
+  </div>
+
+  <footer>
+    <p>Built with ❤️ by <strong>Lisa Dube</strong> — using ExchangeRate-API v6</p>
+  </footer>
 
   <!-- Chart.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
