Refactor comments in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Orange Header Bar -->
+  <!-- Header Bar -->
   <div class="header-bar">
     <span class="logo">
       <span class="logo-emoji">💱</span>
@@ -54,7 +54,7 @@
     </form>
   </div>
 
-  <!-- Optionally, trend chart card section can follow -->
+
   <div class="trend-card">
     <h3>📊 ZWL vs Other Currencies (7-Day Trend)</h3>
     <canvas id="chart" width="400" height="200"></canvas>
@@ -66,7 +66,7 @@
 
   <!-- Chart.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- Main Script -->
+  
   <script src="script.js"></script>
 </body>
 </html>
