--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- 🌍 ZWL Currency Converter by Lisa Dube-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +8,6 @@
   <title>ZWL Currency Converter</title>
   <meta name="description" content="Live Zimbabwean Dollar (ZWL) currency converter with real-time exchange rates and 7-day trend chart. Built by Lisa Dube." />
 
-  <!-- Favicon, SEO Others, etc. (optional) -->
 
   <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css" />
